# WebsiteHendryBackend

./: README.md  alembic.ini  check.py  main.py  pyproject.toml  requirements.txt  server.py
alembic/: env.py
alembic/versions/: 11f1e7574289_first.py  180566b8801f_add_created_at.py  1c34b6fdcd2c_.py  1e92127f9237_update_table_name.py  38344deb45e0_add_location_table.py  3ff9a25c3ee6_add_ip_address_to_event_analytic.py  4ab7860110c3_add_analytics_table.py  4c2a8df16042_project_crud.py  4ec8c4c9f7f8_add_comment_field_to_location_model.py  60ef4eabd24f_add_created_at_for_anlytic_models.py  61b0c3fb2ae2_fourth.py  78d39e8cb98c_add_lccation_models.py  ad7a45e8bf8d_delete_created_at.py  b22a3d474536_add_location_models_2.py  c30e2ba809af_no_unique.py  fad2afd0ebb7_third.py
apps/: env.py
apps/analytics/: api.py  crud.py  models.py  schemas.py
apps/google_auth/: api.py
apps/google_auth/templates/: home.html
apps/project_crud/: api.py  crud.py  models.py  schemas.py
apps/project_map/: api.py  crud.py  models.py  schemas.py
apps/rumah123/: api.py  crud.py  schemas.py
apps/rumah123/WIP/: pg.ipynb  pg_bandung.csv  pg_depok.csv  pg_jakarta.csv
apps/sql/: crud.py  database.py  models.py
